updated versions from fred trunk.